@@ -74,6 +74,10 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       Could yield a single tempfile with the first TEMPFILE's contents, used by both steps
       in the action list.
 
+  From James Benton:
+    - Add COMPILATIONDB_USE_PATH_FILTER env option for CompilationDatabase() builder which allows
+      filtering of entries based on the output file paths using fnmatch (issue #3742).
+
 
 
 
